--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -41,6 +41,30 @@
   "csr": {
     "title": "企業社會責任",
     "description": "在 H Hospitality Group，我們的承諾不僅僅是提供卓越的酒店服務；它還延伸到對我們的社區和環境產生有意義的影響。自我們在愛妮島巴拉望成立以來，我們一直堅定不移地致力於通過各種支持人民和保護地球的倡議來創造積極的變化。",
+    "giftGiving2025": {
+      "title": "傳遞微笑，服務社區：禮物贈送與供餐活動",
+      "date": "(2025年12月10日)",
+      "description1": "H Hospitality Group 秉持著同情心與團隊合作精神，成功為愛妮島偏遠社區 Barangay Mabini 的兒童舉辦了禮物贈送與供餐活動。通過 HHG 員工的真誠參與，近 700 名兒童收到了禮物和熱騰騰的飯菜，充滿關懷的時刻讓這一天變得格外特別。",
+      "description2": "這項舉措不僅反映了 HHG 對企業社會責任的承諾，也展現了我們員工的愛心，大家超越職責範圍，齊心協力服務、連結並創造改變。因為在 HHG，回饋社會是我們共同的使命，每一個微笑都提醒著我們這份工作的意義。"
+    },
+    "elderlyCare": {
+      "title": "關愛長者，傳遞溫暖",
+      "date": "(2025年12月10日)",
+      "description1": "通過團結、同情和共同的目標，H Hospitality Group 向愛妮島 Barangay Mabini 的 50 位長者表達了喜悅與關懷，並進行了特別的現金與禮物贈送活動。這項活動的成功歸功於 HHG 員工的集體努力，大家慷慨捐贈二手物品並組織了“愛心義賣”，將小小的個人貢獻轉化為真誠的幸福時刻。",
+      "description2": "這是我們首次舉辦此類活動，見證了 HHG 員工的愛心。這不僅僅是公司年度禮物贈送計劃的延伸，更反映了團隊合作與慷慨如何創造更深遠的影響，以尊嚴、溫暖和感激來榮耀我們的長者。在 HHG，回饋社會不僅是一個計劃，更是每位員工共同實踐的承諾。"
+    },
+    "brigadaEskwela2025": {
+      "title": "共同承諾，支持教育",
+      "date": "(2025年6月10日)",
+      "description1": "作為企業社會責任 (CSR) 的一部分，H Hospitality Group 很榮幸參與了 2025 年的 Brigada Eskwela。我們敬業的員工志願貢獻時間和精力，通過清潔、維修桌椅和重新粉刷教室，協助為新學年做好準備。這項舉措反映了 HHG 不僅致力於酒店服務，也致力於為下一代培育學習空間。",
+      "description2": "除了在 Bucana 國立高中、Manlag 國立高中和 Calitang 小學提供的志願服務外，HHG 還捐贈了價值 100,000 披索的建築材料，進一步加強了我們為學生建立更好學習環境的承諾。"
+    },
+    "bloodDonation": {
+      "title": "拯救生命，從一次捐血開始",
+      "date": "(2025年8月13日)",
+      "description1": "H Hospitality Group 與菲律賓紅十字會巴拉望分會合作，成功舉辦了第二次大型捐血活動，從我們的員工和合作夥伴捐贈者那裡收集了 48 袋血液。這項拯救生命的舉措反映了我們對社區關懷的承諾，並將作為年度計劃繼續推行。",
+      "description2": "為了表彰這一努力，HHG 被菲律賓紅十字會授予榮譽，成為愛妮島唯一一家積極主導大型捐血活動的酒店公司。"
+    },
     "communitySupport": {
       "title": "社會支持",
       "description": "H Hospitality Group擁有300名員工，目前是愛妮島最大的旅館集團，我們很開心能為約300個家庭的生計做出貢獻。我們超過70%的員工是愛妮島的當地人，展示了我們通過提供體面的工作和具有競爭力的薪酬福利來真誠支持社區的熱情。我們相信，提供穩定的工作機會和培養性的工作環境對於建立一個繁榮的社區至關重要。我們的員工是我們成功的基石，他們的福祉是我們的首要任務。"
