feat(csr): 添加Paw Rescue项目图片和翻译内容
添加Paw Rescue项目的7张图片，并在中英文翻译文件中新增相关描述内容。同时更新HTML页面展示这些CSR活动内容。

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -65,6 +65,11 @@
       "description1": "In partnership with the Philippine Red Cross – Palawan Chapter, H Hospitality Group successfully conducted its second Mass Blood Donation, collecting 48 bags of blood from our employees and partner donors. This life-saving initiative reflects our commitment to community care and will now be carried forward as an annual program.",
       "description2": "In recognition of this effort, HHG was honored by the PRC as the only hospitality company in El Nido actively leading a mass blood donation initiative."
     },
+    "pawRescue": {
+      "title": "Paw Rescue Project",
+      "description1": "A funded spay and neuter initiative, the Paw Rescue Project was conducted from September 30 to October 6 to support responsible pet care in El Nido, Palawan. The project focused on spaying and neutering stray animals, as well as pets of owners who could not afford the procedure.",
+      "description2": "With the support of two volunteer veterinarians flown in from Isabela Province, local volunteers from El Nido, and employees of H Hospitality Group, a total of 382 animals were successfully spayed and neutered. Cats: 139 female, 82 male. Dogs: 96 female, 65 male. This initiative reflects HHG's commitment to animal welfare and community care, helping create a healthier and safer environment for both animals and residents."
+    },
     "communitySupport": {
       "title": "Community Support Network",
       "description": "With around 300 employees, H Hospitality Group is proud to contribute to the livelihood of around 300 families. As the largest hospitality group in El Nido, we are delighted to make this impact. More than 70% of our workforce are locals from El Nido, showcasing our genuine passion for supporting the community by providing decent jobs with competitive pay and benefits. We believe that offering stable job opportunities and a nurturing work environment is essential to building a thriving community. Our employees are the backbone of our success, and their well-being is our top priority."
