--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -65,6 +65,11 @@
       "description1": "H Hospitality Group 與菲律賓紅十字會巴拉望分會合作，成功舉辦了第二次大型捐血活動，從我們的員工和合作夥伴捐贈者那裡收集了 48 袋血液。這項拯救生命的舉措反映了我們對社區關懷的承諾，並將作為年度計劃繼續推行。",
       "description2": "為了表彰這一努力，HHG 被菲律賓紅十字會授予榮譽，成為愛妮島唯一一家積極主導大型捐血活動的酒店公司。"
     },
+    "pawRescue": {
+      "title": "Paw Rescue Project",
+      "description1": "作為一項資助的絕育計劃，Paw Rescue Project 於9月30日至10月6日進行，旨在支持愛妮島巴拉望的負責任寵物護理。該項目專注於為流浪動物以及無法負擔手術費用的寵物主人提供絕育服務。",
+      "description2": "在兩位從伊薩貝拉省飛來的志願獸醫、愛妮島當地志願者以及 H Hospitality Group 員工的支持下，共有382隻動物成功接受了絕育手術。貓咪：139隻雌性，82隻雄性。狗狗：96隻雌性，65隻雄性。這項舉措反映了HHG對動物福利和社區關懷的承諾，有助於為動物和居民創造更健康、更安全的環境。"
+    },
     "communitySupport": {
       "title": "社會支持",
       "description": "H Hospitality Group擁有300名員工，目前是愛妮島最大的旅館集團，我們很開心能為約300個家庭的生計做出貢獻。我們超過70%的員工是愛妮島的當地人，展示了我們通過提供體面的工作和具有競爭力的薪酬福利來真誠支持社區的熱情。我們相信，提供穩定的工作機會和培養性的工作環境對於建立一個繁榮的社區至關重要。我們的員工是我們成功的基石，他們的福祉是我們的首要任務。"
