--- a/locales/zh-CN/translation.json
+++ b/locales/zh-CN/translation.json
@@ -41,6 +41,31 @@
   "csr": {
     "title": "企业社会责任",
     "description": "在 H Hospitality Group，我们的承诺不仅仅是提供卓越的酒店服务；它还延伸到对我们的社区和环境产生有意义的影响。自我们在爱妮岛巴拉望成立以来，我们一直坚定不移地致力于通过各种支持人民和保护地球的倡议来创造积极的变化。",
+    "pawRescue": {
+      "title": "Paw Rescue 动物救援计划",
+      "description1": "Paw Rescue Project 是一项资助的绝育计划，于 9 月 30 日至 10 月 6 日进行，旨在支持巴拉望爱妮岛的负责任宠物照护。该计划专注于为流浪动物以及无力负担手术费用的饲主宠物进行绝育。",
+      "description2": "在两位从伊萨贝拉省飞来的志愿兽医、爱妮岛当地志工以及 H Hospitality Group 员工的支持下，共有 382 只动物成功完成绝育。猫：139 只母猫，82 只公猫。狗：96 只母狗，65 只公狗。这项举措反映了 HHG 对动物福利和社区关怀的承诺，有助于为动物和居民创造更健康、更安全的环境。"
+    },
+    "giftGivingChildren": {
+      "title": "在爱妮岛透过礼物赠送传递微笑",
+      "description1": "在同情心和团队合作的推动下，H Hospitality Group (HHG) 透过一场充满意义的礼物赠送与供餐活动，为爱妮岛偏远社区之一 Barangay Mabini 的近 700 名儿童带来了欢乐。",
+      "description2": "在 HHG 员工的真诚参与下，孩子们收到了礼物、热腾腾的餐点和发自内心的关怀，将平凡的一天变成了难忘的体验。这项举措反映了 HHG 对企业社会责任的承诺，以及我们坚信团结一致的回馈力量最大。在 HHG，每一个微笑都提醒着我们，服务是我们工作的核心。"
+    },
+    "giftGivingElder": {
+      "title": "对爱妮岛长者的关怀之举",
+      "description1": "在同情心和团结的引导下，HHG 透过一项特别的现金与礼物赠送活动，向爱妮岛 Barangay Mabini 的 50 位长者伸出援手。这项活动之所以能够实现，归功于 HHG 员工的集体慷慨，他们捐赠了二手物品并组织了“爱心义卖”，将个人的微薄贡献转化为充满意义的善举。",
+      "description2": "这是我们首次举办此类活动，反映了 HHG 员工的爱心。这不仅仅是公司年度礼物赠送计划的延伸，更以尊严、温暖和感激之情向我们的长者致敬，展现了在 HHG，回馈社会是每位员工共同实践的承诺。"
+    },
+    "schoolBrigade": {
+      "title": "透过校园服务队打造更好的教室",
+      "description1": "作为其企业社会责任 (CSR) 努力的一部分，H Hospitality Group 自豪地参与了 2025 年校园服务队 (School Brigade 2025)，支持公立学校为新学年做好准备。HHG 员工自愿贡献时间和精力清洁教室、修理桌椅并重新粉刷学习空间，协助为学生创造安全且温馨的环境。",
+      "description2": "除了在 Bucana 国立高中、Manlag 国立高中和 Calitang 小学提供的志工服务外，HHG 更进一步捐赠了价值 100,000 披索的建筑材料，加强了我们打造更好教室及为后代培育学习空间的承诺。"
+    },
+    "bloodDonation": {
+      "title": "拯救生命，从每一次捐血开始",
+      "description1": "与菲律宾红十字会巴拉望分会合作，H Hospitality Group 成功举办了第二次大型捐血活动，从员工和合作伙伴捐赠者那里收集了 48 袋血液。这项拯救生命的举措反映了 HHG 对社区关怀和公共卫生的持续承诺。",
+      "description2": "作为被菲律宾红十字会认可为爱妮岛唯一积极主导大型捐血活动的酒店公司，HHG 为能将同情心化为行动而感到自豪。随着此计划现已定为年度活动，我们将继续致力于拯救生命，从每一次捐血开始。"
+    },
     "communitySupport": {
       "title": "社会支持",
       "description": "H Hospitality Group拥有约300名员工，目前是爱妮岛最大的酒店集团，我们很高兴能为约300个家庭的生计做出贡献。我们超过70%的员工是爱妮岛的当地人，展示了我们通过提供体面的工作和具有竞争力的薪酬福利来真诚支持社区的热情。我们相信，提供稳定的工作机会和培养性的工作环境对于建立一个繁荣的社区至关重要。我们的员工是我们成功的基石，他们的福祉是我们的首要任务。"
