--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -41,34 +41,30 @@
   "csr": {
     "title": "企業社會責任",
     "description": "在 H Hospitality Group，我們的承諾不僅僅是提供卓越的酒店服務；它還延伸到對我們的社區和環境產生有意義的影響。自我們在愛妮島巴拉望成立以來，我們一直堅定不移地致力於通過各種支持人民和保護地球的倡議來創造積極的變化。",
-    "giftGiving2025": {
-      "title": "傳遞微笑，服務社區：禮物贈送與供餐活動",
-      "date": "(2025年12月10日)",
-      "description1": "H Hospitality Group 秉持著同情心與團隊合作精神，成功為愛妮島偏遠社區 Barangay Mabini 的兒童舉辦了禮物贈送與供餐活動。通過 HHG 員工的真誠參與，近 700 名兒童收到了禮物和熱騰騰的飯菜，充滿關懷的時刻讓這一天變得格外特別。",
-      "description2": "這項舉措不僅反映了 HHG 對企業社會責任的承諾，也展現了我們員工的愛心，大家超越職責範圍，齊心協力服務、連結並創造改變。因為在 HHG，回饋社會是我們共同的使命，每一個微笑都提醒著我們這份工作的意義。"
+    "pawRescue": {
+      "title": "Paw Rescue 動物救援計畫",
+      "description1": "Paw Rescue Project 是一項資助的絕育計畫，於 9 月 30 日至 10 月 6 日進行，旨在支持巴拉望愛妮島的負責任寵物照護。該計畫專注於為流浪動物以及無力負擔手術費用的飼主寵物進行絕育。",
+      "description2": "在兩位從伊薩貝拉省飛來的志願獸醫、愛妮島當地志工以及 H Hospitality Group 員工的支持下，共有 382 隻動物成功完成絕育。貓：139 隻母貓，82 隻公貓。狗：96 隻母狗，65 隻公狗。這項舉措反映了 HHG 對動物福利和社區關懷的承諾，有助於為動物和居民創造更健康、更安全的環境。"
     },
-    "elderlyCare": {
-      "title": "關愛長者，傳遞溫暖",
-      "date": "(2025年12月10日)",
-      "description1": "通過團結、同情和共同的目標，H Hospitality Group 向愛妮島 Barangay Mabini 的 50 位長者表達了喜悅與關懷，並進行了特別的現金與禮物贈送活動。這項活動的成功歸功於 HHG 員工的集體努力，大家慷慨捐贈二手物品並組織了“愛心義賣”，將小小的個人貢獻轉化為真誠的幸福時刻。",
-      "description2": "這是我們首次舉辦此類活動，見證了 HHG 員工的愛心。這不僅僅是公司年度禮物贈送計劃的延伸，更反映了團隊合作與慷慨如何創造更深遠的影響，以尊嚴、溫暖和感激來榮耀我們的長者。在 HHG，回饋社會不僅是一個計劃，更是每位員工共同實踐的承諾。"
+    "giftGivingChildren": {
+      "title": "在愛妮島透過禮物贈送傳遞微笑",
+      "description1": "在同情心和團隊合作的推動下，H Hospitality Group (HHG) 透過一場充滿意義的禮物贈送與供餐活動，為愛妮島偏遠社區之一 Barangay Mabini 的近 700 名兒童帶來了歡樂。",
+      "description2": "在 HHG 員工的真誠參與下，孩子們收到了禮物、熱騰騰的餐點和發自內心的關懷，將平凡的一天變成了難忘的體驗。這項舉措反映了 HHG 對企業社會責任的承諾，以及我們堅信團結一致的回饋力量最大。在 HHG，每一個微笑都提醒著我們，服務是我們工作的核心。"
     },
-    "brigadaEskwela2025": {
-      "title": "共同承諾，支持教育",
-      "date": "(2025年6月10日)",
-      "description1": "作為企業社會責任 (CSR) 的一部分，H Hospitality Group 很榮幸參與了 2025 年的 Brigada Eskwela。我們敬業的員工志願貢獻時間和精力，通過清潔、維修桌椅和重新粉刷教室，協助為新學年做好準備。這項舉措反映了 HHG 不僅致力於酒店服務，也致力於為下一代培育學習空間。",
-      "description2": "除了在 Bucana 國立高中、Manlag 國立高中和 Calitang 小學提供的志願服務外，HHG 還捐贈了價值 100,000 披索的建築材料，進一步加強了我們為學生建立更好學習環境的承諾。"
+    "giftGivingElder": {
+      "title": "對愛妮島長者的關懷之舉",
+      "description1": "在同情心和團結的引導下，HHG 透過一項特別的現金與禮物贈送活動，向愛妮島 Barangay Mabini 的 50 位長者伸出援手。這項活動之所以能夠實現，歸功於 HHG 員工的集體慷慨，他們捐贈了二手物品並組織了「愛心義賣」，將個人的微薄貢獻轉化為充滿意義的善舉。",
+      "description2": "這是我們首次舉辦此類活動，反映了 HHG 員工的愛心。這不僅僅是公司年度禮物贈送計畫的延伸，更以尊嚴、溫暖和感激之情向我們的長者致敬，展現了在 HHG，回饋社會是每位員工共同實踐的承諾。"
+    },
+    "schoolBrigade": {
+      "title": "透過校園服務隊打造更好的教室",
+      "description1": "作為其企業社會責任 (CSR) 努力的一部分，H Hospitality Group 自豪地參與了 2025 年校園服務隊 (School Brigade 2025)，支持公立學校為新學年做好準備。HHG 員工自願貢獻時間和精力清潔教室、修理桌椅並重新粉刷學習空間，協助為學生創造安全且溫馨的環境。",
+      "description2": "除了在 Bucana 國立高中、Manlag 國立高中和 Calitang 小學提供的志工服務外，HHG 更進一步捐贈了價值 100,000 披索的建築材料，加強了我們打造更好教室及為後代培育學習空間的承諾。"
     },
     "bloodDonation": {
-      "title": "拯救生命，從一次捐血開始",
-      "date": "(2025年8月13日)",
-      "description1": "H Hospitality Group 與菲律賓紅十字會巴拉望分會合作，成功舉辦了第二次大型捐血活動，從我們的員工和合作夥伴捐贈者那裡收集了 48 袋血液。這項拯救生命的舉措反映了我們對社區關懷的承諾，並將作為年度計劃繼續推行。",
-      "description2": "為了表彰這一努力，HHG 被菲律賓紅十字會授予榮譽，成為愛妮島唯一一家積極主導大型捐血活動的酒店公司。"
-    },
-    "pawRescue": {
-      "title": "Paw Rescue Project",
-      "description1": "作為一項資助的絕育計劃，Paw Rescue Project 於9月30日至10月6日進行，旨在支持愛妮島巴拉望的負責任寵物護理。該項目專注於為流浪動物以及無法負擔手術費用的寵物主人提供絕育服務。",
-      "description2": "在兩位從伊薩貝拉省飛來的志願獸醫、愛妮島當地志願者以及 H Hospitality Group 員工的支持下，共有382隻動物成功接受了絕育手術。貓咪：139隻雌性，82隻雄性。狗狗：96隻雌性，65隻雄性。這項舉措反映了HHG對動物福利和社區關懷的承諾，有助於為動物和居民創造更健康、更安全的環境。"
+      "title": "拯救生命，從每一次捐血開始",
+      "description1": "與菲律賓紅十字會巴拉望分會合作，H Hospitality Group 成功舉辦了第二次大型捐血活動，從員工和合作夥伴捐贈者那裡收集了 48 袋血液。這項拯救生命的舉措反映了 HHG 對社區關懷和公共衛生的持續承諾。",
+      "description2": "作為被菲律賓紅十字會認可為愛妮島唯一積極主導大型捐血活動的酒店公司，HHG 為能將同情心化為行動而感到自豪。隨著此計畫現已定為年度活動，我們將繼續致力於拯救生命，從每一次捐血開始。"
     },
     "communitySupport": {
       "title": "社會支持",
@@ -79,7 +75,7 @@
       "description": "我們以海龜保育為榮，定期為員工舉辦相關培訓，強調海龜保育的重要性，並將這份教育延伸至我們的旅客。每年，我們將 8,000 至 10,000 隻海龜釋放回大海。截至 2024 年，我們已成功拯救並復育了超過 49,500 隻海龜生命，為海洋生態的保護作出重要貢獻。"
     },
     "spayingNeutering": {
-      "title": "流浪狗與貓結紮行動",
+      "title": "流浪狗與猫結紮行動",
       "description": "我們與馬尼拉知名的 Vet in Practice 動物醫院合作，每週舉辦免費的流浪狗貓結紮活動。我們在一個月內接待來自馬尼拉的 6 組、每組 5 位獸醫，為他們提供住宿。這些活動有效控制了流浪動物的數量，改善了牠們的生活條件，也提升了社區的整體環境。"
     },
     "nutritionalLunchProgram": {
