--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -490,6 +490,47 @@
     "orientalSpa": {
       "name": "東方水療",
       "description": "東方水療為您提供一個寧靜的放鬆和恢復活力的綠洲，位於愛妮島的中心。我們的專業治療師提供一系列傳統和現代的療程，從舒緩按摩到煥膚面部護理，使用天然的當地原料。體驗極致的寧靜，煥然一新，準備繼續您的熱帶天堂冒險。"
+    },
+    "services": {
+      "title": "營業項目",
+      "massage": {
+        "title": "傳統按摩",
+        "desc": "體驗傳統菲律賓希洛特和泰式按摩技術的療癒力量。"
+      },
+      "aromatherapy": {
+        "title": "芳香療法",
+        "desc": "使用精選精油和舒緩香氣放鬆您的感官。"
+      },
+      "scrub": {
+        "title": "身體磨砂",
+        "desc": "使用當地原料製成的有機身體磨砂膏讓您的肌膚煥然一新。"
+      }
+    },
+    "therapists": {
+      "title": "我們的按摩師",
+      "description": "我們的持照且經驗豐富的按摩師團隊致力於為您提供最高品質的護理。他們接受過各種療法的培訓，能量身定製每場療程以滿足您的具體需求和偏好。"
+    },
+    "venue": {
+      "title": "場地",
+      "description": "東方水療 2 在愛妮島中心提供一個寧靜的避難所。我們寬敞的理療室設計旨在確保隱私和寧靜，擁有受自然啟發的平靜內飾。",
+      "privateRooms": "私人理療室",
+      "lounge": "放鬆休息室",
+      "shower": "淋浴設施"
+    },
+    "equipment": {
+      "title": "設備",
+      "description": "我們使用最先進的設備來提升您的水療體驗，隨時確保舒適和衛生。",
+      "beds": "人體工學按摩床",
+      "ac": "氣候控制",
+      "audio": "舒緩音響系統"
+    },
+    "pricing": {
+      "title": "價目表",
+      "item1": "招牌東方按摩 (60 分鐘)",
+      "item2": "瑞典式按摩 (60 分鐘)",
+      "item3": "深層組織按摩 (60 分鐘)",
+      "item4": "足部反射療法 (30 分鐘)",
+      "item5": "身體磨砂與按摩組合 (90 分鐘)"
     }
   },
   "bar": {
